--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
+        		<h1>Welcome to my art store!</h1>
 				<p><img src="https://www.freecatphotoapp.com/your-image.jpg" alt="turtle">
 
-<img src="https://www.freecatphotoapp.com/your-image.jpg" alt="red skirt">
+				<img src="https://www.freecatphotoapp.com/your-image.jpg" alt="red skirt">
 
-<img src="https://www.freecatphotoapp.com/your-image.jpg" alt="malevolent">
+				<img src="https://www.freecatphotoapp.com/your-image.jpg" alt="malevolent">
 
-<img src="https://www.freecatphotoapp.com/your-image.jpg" alt="purple lighthouse">
+				<img src="https://www.freecatphotoapp.com/your-image.jpg" alt="purple lighthouse">
 
-<img src="https://www.freecatphotoapp.com/your-image.jpg" alt="cat costume">
+				<img src="https://www.freecatphotoapp.com/your-image.jpg" alt="cat costume">
 
-<img src="https://www.freecatphotoapp.com/your-image.jpg" alt="girl in chair">
+				<img src="https://www.freecatphotoapp.com/your-image.jpg" alt="girl in chair">
 
-<img src="https://www.freecatphotoapp.com/your-image.jpg" alt="girl in tub">
+				<img src="https://www.freecatphotoapp.com/your-image.jpg" alt="girl in tub">
 
-<img src="https://www.freecatphotoapp.com/your-image.jpg" alt="untitled"><!-- /.blurb -->
+				<img src="https://www.freecatphotoapp.com/your-image.jpg" alt="untitled"><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
