--- a/artwork/index.html
+++ b/artwork/index.html
@@ -1,1 +1,11 @@
+---
+layout: default
+title: Paintings
+---
+	<h1>{{ page.title }}</h1>
+	<ul class="paintings">
 
+	  {% for paintings in site.paintings %}
+	    <li><span>{{ paintings.date | date_to_string }}</span> » <a href="{{ paintings.url }}" title="{{ paintings.title }}">{{ paitings.title }}</a></li>
+	  {% endfor %}
+	</ul>
